--- a/WEB/src/app/app.component.html
+++ b/WEB/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="alert alert-primary" role="alert">
-  A simple primary alert—check it out!
-</div>
+<!-- app.component.html -->
+<ng-container *ngIf="auth.isAuthenticated(); else loginOnly">
+  <app-nav-bar></app-nav-bar>
+  <router-outlet></router-outlet>
+</ng-container>
+
+<ng-template #loginOnly>
+  <router-outlet></router-outlet>  <!-- this will render only login -->
+</ng-template>
